[package]
name = "trueaccess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "~0.9.3"
regex = "~1"
futures = "~0.3"
futures-util = "~0.3"

[dev-dependencies]
rstest = "~0.16"
bollard = "~0.13"
tokio = "~1.23"
