[tool.poetry]
name = "trueaccess"
version = "0.1.0"
description = ""
authors = ["enforcer007 <akhilgodvsdemon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
black = "^22.12.0"
pydantic = "^1.10.4"
paramiko = "^2.12.0"


[tool.poetry.group.dev.dependencies]
docker = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
